Adicionado live reload e separado frontend de backend

--- a/web/src/_document.html
+++ b/web/src/_document.html
@@ -10,26 +10,22 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/vendor/css/bootstrap.min.css" />
 
     <!-- Vendors / Terceiros -->
     <script src="/vendor/js/jquery.min.js"></script>
     <script src="/vendor/js/angular.min.js"></script>
+    <script src="/vendor/js/ui-router.min.js"></script>
   </head>
 
   <body ng-app="app">
     <layout></layout>
 
     <!-- Vendors -->
-    <script src="/vendor/js/jquery.min.js"></script>
-    <!-- <script src="/vendor/js/bootstrap.bundle.min.js"></script> -->
     <script src="/vendor/js/angular-route.js"></script>
     <script src="/vendor/js/angular-animate.js"></script>
     <script src="/vendor/js/angular-sanitize.js"></script>
     <script src="/vendor/js/angular-masks.js"></script>
-    <script src="/vendor/js/ui-router.min.js"></script>
     <script src="/vendor/js/jquery.mask.min.js"></script>
-    <!-- <script src="/vendor/js/ui-bootstrap-tpls-2.5.0.min.js"></script> -->
     <script src="/vendor/js/sweetalert2011.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
@@ -40,11 +36,8 @@
 
     <!-- Core -->
     <script src="/core/app.js"></script>
-    <script src="/core/cit-smart-frame.js"></script>
-    <script src="/core/layout.js"></script>
-
-    <!-- Routers -->
     <script src="/core/router.js"></script>
+    <script src="/core/cit-smart-frame.js"></script>
 
     <!-- Utils -->
     <script src="/utils/cit-menuUtil.js"></script>
@@ -56,6 +49,7 @@
     <script src="/services/daoService.js"></script>
 
     <!-- Components -->
+    <script src="/components/layout/component.js"></script>
 
     <!-- Controllers -->
     <script src="/controllers/menuController.js"></script>
